<resources>
    <string name="app_name">Al Qur\'an</string>
    <string name="copied">Copied</string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="play"><![CDATA[>]]></string>
    <string name="read_quran">Read Quran</string>
    <string name="listen_quran">Listen Quran</string>
    <string name="surah_name">Surah Name</string>
    <string name="selected">Selected</string>
    <string name="playing">Playing</string>
    <string name="paused">Paused</string>
    <string name="frwd5sec">Forwarded 5 seconds</string>
    <string name="cant_frwd5sec">Cannot forward 5 seconds</string>
    <string name="bkwd5sec">Backwarded 5 seconds</string>
    <string name="cant_bkwd5sec">Cannot backward 5 seconds</string>
    <string name="update_coming_soon">Update Coming Soon!!!</string>
    <string name="slogan">Read or Listen Quran Offline</string>
    <string name="coming_coon">Comming Soon!</string>
    <string name="ayah_reciters">Ayah Reciters</string>
    <string name="reciters">Reciters</string>
    <string name="name">Name</string>
    <string name="eng_name">English Name</string>
    <string name="language">Language</string>
    <string name="internetconnection">This App needs Internet Connection, You are currently not connected to internet</string>
    <string name="errortxt">Something went wrong we are working over it.Please try after some time</string>
    <string name="Timeout">Request Time out. Please try again.</string>
    <string name="networkerror">Network error,Please try after some time</string>
    <string name="please_wait">Please Wait...</string>
    <string name="listen_ayah">Listen Ayah</string>
    <string name="enter_ayah_num">Enter Ayah Number : (1 to 6236)</string>
    <string name="search">Search</string>
    <string name="listen">Listen</string>
    <string name="reciter">Reciter</string>
    <string name="please_enter_ayah_num">Please enter Ayah Number</string>
    <string name="reciting_ayat">Reciting Ayat :</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.islam.alquran</string>
    <string name="close">Close</string>
    <string name="app_info">App Info</string>
    <string name="appp_name">App Name :</string>
    <string name="feature">Features :</string>
    <string name="features">Read Quran + Listen to Surah Offline</string>
    <string name="update">Update :</string>
    <string name="whats_New">What\'s New ?</string>
    <!--<string name="new_feature">Listen to Ayah from List of Reciters!</string>-->
    <string name="new_feature">Added Surah Waqi\'ah!</string>
    <string name="version">Version :</string>
    <string name="v1">2.1</string>
    <string name="app_icon">App Icon :</string>
    <string name="dev_info">Developer Info</string>
    <string name="sss">S MD Sulaiman Sait</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="my_num">+917207579969</string>
    <string name="email">Email</string>
    <string name="my_email">saudagar.sulaiman@gmail.com</string>
    <string name="Dua">Dua</string>
    <string name="duas1">“My Lord! Increase me in knowledge.”  [SURAH TA-HA(114)]</string>
    <string name="duas2">“My Lord! I seek refuge with You from the whisperings (suggestions) of the Shayatin (devils).  And I seek refuge with You, My Lord! lest they should come near me.”  [SURAH AL-MU’MINUN(97-98)]</string>
    <string name="duas3">“My Lord! Forgive and have mercy, for You are the Best of those who show mercy!”  [SURAH AL-MU’MINUN(118)]</string>
    <string name="duas4">“Our Lord! Give us in this world that which is good and in the Hereafter that which is good, and save us from the torment of the Fire!”  [SURAH AL-BAQARAH (201)]</string>
    <string name="duas5">“Our Lord! Forgive me and my parents, and (all) the believers on the Day when the reckoning will be established.”  [SURAH IBRAHEEM(41)]</string>
    <string name="duas6">“Our Lord! Keep perfect our Light for us [and do not put it off till we cross over the Sirat (a slippery bridge over the Hell) safely] and grant us forgiveness. Verily, You are Able to do all things.”    [SURAH AT-TAHREEM (8)]</string>
    <string name="duas7">“O my Lord! Grant me from You, a good offspring. You are indeed the All-Hearer of invocation.”   [SURAH AL-IMRAN (38)]</string>
    <string name="duas8">“O my Lord! I seek refuge with You from asking You that of which I have no knowledge. And unless You forgive me and have Mercy on me, I will indeed be one of the losers.” [SURAH HUUD (47)]</string>
    <string name="my_request1">Jazak Allahu Khairan Wa Ahsanal Jaza for using this App. May Allah(SWT) shower his blessings upon us all (Aameen).</string>
    <string name="my_request2">Please feel free to contact me from above details regarding any changes/updates, In Shaa Allah, i will do my best.</string>
    <string name="privacy_policy">Privacy Policy :</string>
    <string name="my_privacy_policy">https://www.privacypolicygenerator.info/live.php?token=93VgHlIxPwsWDl4pu6yu8ndOszV6X21f</string>
    <string name="website">Website :</string>
    <string name="my_website">https://saudagarsulaiman.wixsite.com/alquranoffline</string>
    <string name="aameen">Allahumma Aameen</string>
    <string name="more">More</string>

</resources>
