<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:paddingBottom="@dimen/def_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/dlg_white_trtl_c15"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginLeft="@dimen/margin5"
                android:layout_marginEnd="@dimen/margin5"
                android:layout_marginRight="@dimen/margin5"
                android:orientation="vertical"
                android:paddingLeft="@dimen/def_padding"
                android:paddingRight="@dimen/def_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin10"
                    android:gravity="center"
                    android:paddingLeft="@dimen/padding50"
                    android:paddingRight="@dimen/padding50"
                    android:text="@string/Dua"
                    android:textColor="@color/bg_grad_end_g1"
                    android:textSize="@dimen/text22"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin5"
                    android:background="@drawable/rec_green_trans_c10"
                    android:padding="@dimen/padding5"
                    android:text="@string/duas1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin5"
                    android:background="@drawable/rec_green_trans_c10"
                    android:padding="@dimen/padding5"
                    android:text="@string/duas2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin5"
                    android:background="@drawable/rec_green_trans_c10"
                    android:padding="@dimen/padding5"
                    android:text="@string/duas3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin5"
                    android:background="@drawable/rec_green_trans_c10"
                    android:padding="@dimen/padding5"
                    android:text="@string/duas4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin5"
                    android:background="@drawable/rec_green_trans_c10"
                    android:padding="@dimen/padding5"
                    android:text="@string/duas5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin5"
                    android:background="@drawable/rec_green_trans_c10"
                    android:padding="@dimen/padding5"
                    android:text="@string/duas6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin5"
                    android:background="@drawable/rec_green_trans_c10"
                    android:padding="@dimen/padding5"
                    android:text="@string/duas7"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin5"
                    android:background="@drawable/rec_green_trans_c10"
                    android:padding="@dimen/padding5"
                    android:text="@string/duas8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin10"
                    android:gravity="center"
                    android:padding="@dimen/padding5"
                    android:text="@string/aameen"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size"
                    android:textStyle="bold" />


            </LinearLayout>

            <Button
                android:id="@+id/btn_close"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_btn_height"
                android:layout_marginLeft="@dimen/margin5"
                android:layout_marginTop="@dimen/def_margin"
                android:layout_marginRight="@dimen/margin5"
                android:layout_marginBottom="@dimen/margin10"
                android:background="@drawable/rec_green_white_c10"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/bg_grad_end_g1"
                android:textSize="@dimen/def_text_size"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>