<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/dlg_white_trtl_c15"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginEnd="@dimen/margin5"
            android:layout_marginRight="@dimen/margin5"
            android:orientation="vertical"
            android:paddingLeft="@dimen/def_padding"
            android:paddingRight="@dimen/def_padding">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin10"
                android:gravity="center"
                android:paddingLeft="@dimen/padding50"
                android:paddingRight="@dimen/padding50"
                android:text="@string/dev_info"
                android:textColor="@color/bg_grad_end_g1"
                android:textSize="@dimen/text22"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/def_margin"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:text="@string/app_icon"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height40"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:src="@drawable/app_icon"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <com.islam.alquran.Utilities.AutoScrollableTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    android:text="@string/sss"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_lbl_size"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:text="@string/mobile_num"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <com.islam.alquran.Utilities.AutoScrollableTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    android:text="@string/my_num"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_lbl_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_text_size" />

                <com.islam.alquran.Utilities.AutoScrollableTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    android:text="@string/my_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/def_lbl_size"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/def_margin"
                android:text="@string/my_request1"
                android:textColor="@color/black"
                android:textSize="@dimen/def_lbl_size"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/def_margin"
                android:text="@string/my_request2"
                android:textColor="@color/black"
                android:textSize="@dimen/def_lbl_size"
                android:textStyle="italic" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="@dimen/def_btn_height"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginTop="@dimen/def_margin"
            android:layout_marginRight="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin5"
            android:background="@drawable/rec_green_white_c10"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/bg_grad_end_g1"
            android:textSize="@dimen/def_text_size"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>